syntax = "proto3";

package Shop.Application.DTOs.Product;

message DapperProduct {
    int32 id = 1;
    int32 product_id = 2;
    int32 product_stock_price_id = 3;
    string name = 4;
    string? latin_name = 5;
    string? code = 6;
    int64 sale_price = 7;
    int64 discount_price = 8;
    bool stock_status = 9;
    int32 quantity = 10;
    int32 maximum_sale_in_order = 11;
    string? short_description = 12;
    string? short_link = 13;
    int32 type_id = 14;
    string store_name = 15;
    string group_title = 16;
    int32 tax_id = 17;
    int32 rep_id = 18;
    int32 store_id = 19;
    int32? parent_id = 20;
    string latin_store_name = 21;
    google.protobuf.Timestamp create_date = 22;
    int32 brand_id = 23;
    string brand_title = 24;
    string latin_brand_title = 25;
    bool single_sale = 26;
    int32? quantity_per_bundle = 27;
    string description = 28;
    string? tax_code = 29;
    string? keywords = 30;
    google.protobuf.Timestamp? discount_date = 31;
    bool is_active = 32;
    int32 section_id = 33;
    bool? show_in_discount_panels = 34;
    int32? best_stock_id = 35;
    int32? best_stock_user_categury_id = 36;
    int32? categury_of_user_id = 37;
    string categury_of_user_type = 38;
}
